--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>MySite</title>
   <style>
     body {
       background: url('http://www.33cnchen.cn/upload/files/guidao1080.jpeg') no-repeat;
